fixed layout bug

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -94,6 +94,8 @@ body {
   justify-content: flex-start;
   margin: 0 auto;
   max-width: 1200px;
+  /* min-width: 30%; */
+  width: 100%;
   padding: var(--spacing-xl);
 }
 
@@ -104,7 +106,7 @@ body {
   margin: 2rem auto;
   max-width: 25rem;
   padding: var(--spacing-xl);
-  width: 100%;
+  width: 75%;
 
   h2 {
     color: #444;
@@ -832,6 +834,11 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+  /* General Layout */
+  #page-wrapper {
+    padding: var(--spacing-lg) 0;
+    margin: 0;
+  }
 
   /* Header layout */
   header {
